cleanup [platform]: quick fixes
GitOrigin-RevId: 451b1b188785e9bf0e0d629ca31b71d9ebd7b5c5